// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/containers/pages/jurisdictionView/jurisdictionTable selects and deselect nodes: should be now checked 1`] = `
<input
  checked={true}
  key="2942-check-jurisdiction"
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`src/containers/pages/jurisdictionView/jurisdictionTable selects and deselect nodes: should be now deselected 1`] = `
<input
  checked={false}
  key="2942-check-jurisdiction"
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`src/containers/pages/jurisdictionView/jurisdictionTable selects and deselect nodes: should be unchecked 1`] = `
<input
  checked={false}
  key="2942-check-jurisdiction"
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`src/containers/pages/jurisdictionView/jurisdictionTable shows errorMessage: should have jurisdiction hierarchy error message 1`] = `"An error ocurred. Please try and refresh the page.The specific error is: Failed to load Jurisdiction hierarchy"`;

exports[`src/containers/pages/jurisdictionView/jurisdictionTable works correctly through a full render cycle: after first click 1`] = `"NameStructures CountSelected Jurisdictions"`;

exports[`src/containers/pages/jurisdictionView/jurisdictionTable works correctly through a full render cycle: after first click 2`] = `"Mtendere1"`;

exports[`src/containers/pages/jurisdictionView/jurisdictionTable works correctly through a full render cycle: after second click 1`] = `"NameStructures CountSelected Jurisdictions"`;

exports[`src/containers/pages/jurisdictionView/jurisdictionTable works correctly through a full render cycle: after second click 2`] = `"Akros_1159"`;

exports[`src/containers/pages/jurisdictionView/jurisdictionTable works correctly through a full render cycle: should have single node(parent node) 1`] = `"NameStructures CountSelected Jurisdictions"`;

exports[`src/containers/pages/jurisdictionView/jurisdictionTable works correctly through a full render cycle: should have single node(parent node) 2`] = `"Lusaka"`;

exports[`src/containers/pages/jurisdictionView/jurisdictionTable works correctly through a full render cycle: should not have btn-link or onClick handler 1`] = `
<span
  key="3951-span"
>
  Akros_1
</span>
`;

exports[`src/containers/pages/jurisdictionView/jurisdictionTable works correctly through a full render cycle: structure count rendered 1`] = `
<SelectedJurisdictionsCount
  dispatch={[Function]}
  id="2942"
  jurisdictions={Array []}
  parentNode={
    Node {
      "children": Array [
        Node {
          "children": Array [
            Node {
              "children": Array [],
              "config": Object {
                "childrenPropertyName": "children",
                "modelComparatorFn": undefined,
              },
              "model": Object {
                "id": "3951",
                "label": "Akros_1",
                "meta": Object {
                  "selected": false,
                },
                "node": Object {
                  "attributes": Object {
                    "geographicLevel": 2,
                    "structureCount": 159,
                  },
                  "locationId": "3951",
                  "name": "Akros_1",
                  "parentLocation": Object {
                    "locationId": "3019",
                    "voided": false,
                  },
                  "voided": false,
                },
                "parent": "3019",
              },
              "parent": [Circular],
            },
          ],
          "config": Object {
            "childrenPropertyName": "children",
            "modelComparatorFn": undefined,
          },
          "model": Object {
            "children": Array [
              Object {
                "id": "3951",
                "label": "Akros_1",
                "meta": Object {
                  "selected": false,
                },
                "node": Object {
                  "attributes": Object {
                    "geographicLevel": 2,
                    "structureCount": 159,
                  },
                  "locationId": "3951",
                  "name": "Akros_1",
                  "parentLocation": Object {
                    "locationId": "3019",
                    "voided": false,
                  },
                  "voided": false,
                },
                "parent": "3019",
              },
            ],
            "id": "3019",
            "label": "Mtendere",
            "meta": Object {
              "selected": false,
            },
            "node": Object {
              "attributes": Object {
                "geographicLevel": 1,
                "structureCount": 1,
              },
              "locationId": "3019",
              "name": "Mtendere",
              "parentLocation": Object {
                "locationId": "2942",
                "voided": false,
              },
              "voided": false,
            },
            "parent": "2942",
          },
          "parent": [Circular],
        },
      ],
      "config": Object {
        "childrenPropertyName": "children",
        "modelComparatorFn": undefined,
      },
      "model": Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "id": "3951",
                "label": "Akros_1",
                "meta": Object {
                  "selected": false,
                },
                "node": Object {
                  "attributes": Object {
                    "geographicLevel": 2,
                    "structureCount": 159,
                  },
                  "locationId": "3951",
                  "name": "Akros_1",
                  "parentLocation": Object {
                    "locationId": "3019",
                    "voided": false,
                  },
                  "voided": false,
                },
                "parent": "3019",
              },
            ],
            "id": "3019",
            "label": "Mtendere",
            "meta": Object {
              "selected": false,
            },
            "node": Object {
              "attributes": Object {
                "geographicLevel": 1,
                "structureCount": 1,
              },
              "locationId": "3019",
              "name": "Mtendere",
              "parentLocation": Object {
                "locationId": "2942",
                "voided": false,
              },
              "voided": false,
            },
            "parent": "2942",
          },
        ],
        "id": "2942",
        "label": "Lusaka",
        "meta": Object {
          "selected": false,
        },
        "node": Object {
          "attributes": Object {
            "geographicLevel": 0,
          },
          "locationId": "2942",
          "name": "Lusaka",
          "voided": false,
        },
      },
    }
  }
  selectedNodesUnderParent={Array []}
/>
`;
